# BMW_Maintenance_Helper

./: .env.example  .gitignore  PLAN.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: test.yml
bmw_helper/: ai.py  ai_tools.py  api.py  cli.py  config.py  email_generator.py  models.py  plan.py  schedule.py  schedule_importer.py
bmw_helper/realoem/: __init__.py
bmw_helper/rockauto/: __init__.py
config/: schedule.yaml  service_history.yaml.example  vehicle.yaml.example
frontend/: app.js  index.html  style.css
templates/: quote_email.j2
tests/: conftest.py
tests/e2e/: catalog.spec.js
tests/fixtures/realoem/: groups.html  parts.html  subgroups.html  vin_select.html
tests/integration/: test_api.py  test_config.py  test_email_generator.py  test_plan.py  test_plan_extensions.py  test_schedule_importer.py
tests/unit/: test_ai_tools.py  test_ai_utils.py  test_extract_intervals.py  test_gemini.py  test_realoem_parsers.py  test_rockauto_mapper.py  test_schedule.py
