[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bmw-maintenance-helper"
version = "0.1.0"
description = "BMW maintenance planning, parts lookup, and quote management tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.14.0",
    "pydantic>=2.10.0",
    "ruamel.yaml>=0.18.0",
    "pdfplumber>=0.11.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "diskcache>=5.6.0",
    "rich>=13.9.0",
    "anyio>=4.7.0",
    "ollama>=0.4.0",
    "curl-cffi>=0.15.0",
    "rockauto-api",
]

[project.scripts]
bmw-helper = "bmw_helper.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bmw_helper"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.uv.sources]
rockauto-api = { git = "https://github.com/rsp2k/rockauto-api" }
